--- a/addon/cubic-bezier/cubic-bezier.css
+++ b/addon/cubic-bezier/cubic-bezier.css
@@ -19,7 +19,7 @@
 .codemirror-cubicbezier {
   position: relative;
   width: 270px;
-  height: 350px;
+  height: 300px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -31,27 +31,24 @@
 }
 .codemirror-cubicbezier > .bezier {
   position: absolute;
-  width:150px;
-  height:150px;
-  top:100px;
-  left:100px;
-
+  width:180px;
+  height:180px;
+  top:50px;
+  left:80px;
 }
 
 .codemirror-cubicbezier > .bezier > .bezier-canvas {
   position: absolute;
-  left:0px;
-  top:0px;
-  right:0px;
-  bottom:0px;
+  left:15px;
+  top:15px;
 }
 
 .codemirror-cubicbezier > .bezier > .control {
   position: absolute;
-  left:0px;
-  right:0px;
-  bottom:0px;
-  top:0px;
+  left:15px;
+  right:15px;
+  bottom:15px;
+  top:15px;
 }
 
 .codemirror-cubicbezier > .bezier > .control > .pointer1,
@@ -92,11 +89,12 @@
 
 .codemirror-cubicbezier > .item-list {
   position:absolute;
-  top: 50px;
+  top: 30px;
   bottom:50px;
   left:0px;
-  width:100px;
+  width:70px;
   padding:10px 4px;
+  padding-right:0px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -109,6 +107,7 @@
   height: 50px;
   border:1px solid gray;
   margin: 10px;
+  margin-right:0px;
   cursor:pointer;
 }
 
@@ -147,7 +146,7 @@
   -webkit-border-radius:50%;
   -moz-border-radius:50%;
   border-radius:50%;
-  background-color: rgba(189, 189, 189, 0.5);
+  background-color: rgba(189, 189, 189, 0.1);
 }
 .codemirror-cubicbezier > .predefined > .left,
 .codemirror-cubicbezier > .predefined > .right
