support codemirror require package,  support parsing for timing function name (linear, ease, ease-in, ease-in-out, ease-out)

--- a/addon/cubic-bezier/cubic-bezier.css
+++ b/addon/cubic-bezier/cubic-bezier.css
@@ -24,6 +24,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  z-index: 10;
+  background-color: white;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;;
